<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Evoulette</string>
    <string name="nav_header_desc" translatable="false">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">Evoulette</string>
    <string name="register">Register</string>
    <string name="login" translatable="false">Login</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="participants">Participants</string>
    <string name="radius">Radius</string>
    <string name="budget">Budget</string>
    <string name="date">Date</string>
    <string name="dd.mm.yyyy" translatable="false">DD.MM.YYYY</string>
    <string name="time">Time</string>
    <string name="hh_mm" translatable="false">HH:MM</string>
    <string name="location">Location</string>
    <string name="limitations" translatable="false">Limitations</string>
    <string name="search" translatable="false">SPIN</string>
    <string name="category1" translatable="false">Action</string>
    <string name="category2" translatable="false">Culture</string>
    <string name="eventname" translatable="false">Event</string>
    <string name="currentpage" translatable="false">1/2</string>
    <string name="description">Description</string>
    <string name="next" translatable="false">NEXT</string>
    <string name="ticketqr" translatable="false">ticket qr-code</string>
    <string name="result">Result</string>
    <string name="redo">AGAIN</string>
    <string name="accept">Accept</string>
    <string name="logocompany" translatable="false">Logo Company</string>
    <string name="picturecompany" translatable="false">Picture Company</string>
    <string name="title_activity_login" translatable="false">Sign in</string>
    <string name="title_activity_ticket">Ticket</string>
    <string name="title_activity_search">Search</string>
    <string name="title_activity_limitations" translatable="false">Limitations</string>
    <string name="title_activity_result">Result</string>
    <string name="title_activity_ticket_wallet" translatable="false">Ticket Wallet</string>
    <string name="toolbar_title" translatable="false">Evoulette</string>
    <string name="lorem_ipsum" translatable="false">Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.</string>
    <string name="title_activity_main" translatable="false">MainActivity</string>
    <string name="title_section1" translatable="false">Section 1</string>
    <string name="title_section2" translatable="false">Section 2</string>
    <string name="title_section3" translatable="false">Section 3</string>

    <string name="action_example" translatable="false">Example action</string>

    <string name="title_activity_basic" translatable="false">BasicActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">Presettings</string>

    <string name="pref_title_social_recommendations" translatable="false">Enable social recommendations</string>
    <string name="pref_description_social_recommendations" translatable="false">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Standard Location</string>
    <string name="pref_default_display_name" translatable="false">Frankfurt</string>

    <string name="pref_title_add_friends_to_messages" translatable="false">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync" translatable="false">Data and sync</string>

    <string name="pref_title_sync_frequency" translatable="false">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings" translatable="false">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications" translatable="false">Notifications</string>

    <string name="pref_title_new_message_notifications" translatable="false">New message notifications</string>

    <string name="pref_title_ringtone" translatable="false">Ringtone</string>
    <string name="pref_ringtone_silent" translatable="false">Silent</string>

    <string name="pref_title_vibrate" translatable="false">Vibrate</string>
    <string name="againmode" translatable="false">Enable Again-Mode</string>
    <string name="pref_description_againmode" translatable="false">Enable the Again-Mode for the possibility to try again.</string>
    <!-- Strings related to login -->
    <string name="prompt_email" translatable="false">Email</string>
    <string name="prompt_password" translatable="false">Password (optional)</string>
    <string name="action_sign_in" translatable="false">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email" translatable="false">This email address is invalid</string>
    <string name="error_invalid_password" translatable="false">This password is too short</string>
    <string name="error_incorrect_password" translatable="false">This password is incorrect</string>
    <string name="error_field_required" translatable="false">This field is required</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="button_login" translatable="false">Login</string>
    <string name="attempts_text">Attempts</string>
    <string name="password_text">Password</string>
    <string name="usename_text" translatable="false">Username</string>
    <string name="username_text" translatable="false">Username</string>
    <string name="delete_ticket">Delete Ticket</string>
    <string name="load_param">Load Param</string>
    <string name="wallet" translatable="false">Wallet</string>
    <string name="channel_name" translatable="false">1</string>
    <string name="channel_description" translatable="false">Main channel</string>
    <string name="logincorrect">Password and user correct</string>
    <string name="loginnotcorrect">User ord password not correct</string>
    <string name="notification_content">New ticket in your Wallet</string>
</resources>
